<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/vLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:layout_marginBottom="10dp"
            android:text="@string/recommended_macros"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:textAlignment="center"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardk"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/yellow"
            app:cardCornerRadius="50dp"
            app:cardElevation="12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvk1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/kCal_amount"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/macro_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardcarbs"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="37dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="8dp"
                    app:cardBackgroundColor="@color/green"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="12dp"
                    app:layout_constraintBottom_toTopOf="@+id/tvc2"
                    app:layout_constraintEnd_toStartOf="@+id/cardp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tvc1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_regular"
                            android:text="@string/carbs_amount"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardp"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="37dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="8dp"
                    app:cardBackgroundColor="@color/red"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="12dp"
                    app:layout_constraintBottom_toTopOf="@+id/tvp2"
                    app:layout_constraintEnd_toStartOf="@+id/cardf"
                    app:layout_constraintStart_toEndOf="@id/cardcarbs"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tvp1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_regular"
                            android:text="@string/sugar_amount"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardf"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="37dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="8dp"
                    app:cardBackgroundColor="@color/pink"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="12dp"
                    app:layout_constraintBottom_toTopOf="@+id/tvf2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cardp"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:id="@+id/tvf1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_regular"
                            android:text="@string/fats_amount"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvc2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/carbs"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/cardcarbs"
                    app:layout_constraintEnd_toEndOf="@+id/cardcarbs"
                    app:layout_constraintTop_toBottomOf="@id/cardcarbs" />

                <TextView
                    android:id="@+id/tvp2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="2dp"
                    android:text="Sugar"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/cardp"
                    app:layout_constraintStart_toStartOf="@+id/cardp"
                    app:layout_constraintTop_toBottomOf="@id/cardp" />

                <TextView
                    android:id="@+id/tvf2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/fats"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/cardf"
                    app:layout_constraintEnd_toEndOf="@+id/cardf"
                    app:layout_constraintTop_toBottomOf="@+id/cardf" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vLinearLayout">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lavender"
            android:text="@string/lets_go"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_bias="0.5" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>